# manipulation

./: .rosinstall  CollisionScene_8h_source.html  Doxyfile  GiskardActionServer.cpp  GiskardActionServer.h  GiskardActionServer_8h_source.html  Node_8h_source.html  Octree_8h_source.html  README.md  R__Conversions_8h_source.html  SuturoSimPanel_8h_source.html  Systembeschreibung.txt  Vector3f_8h_source.html  VisualizationManager_8h_source.html  action_shortcuts.bash  advanced__scope_8h_source.html  annotated.html  classCollisionScene-members.html  classCollisionScene.html  classForceSensor-members.html  classForceSensor.html  classGiskardActionServer-members.html  classGiskardActionServer.html  classMutexMap-members.html  classMutexMap.html  classSuturoSim_1_1SuturoSimPanel-members.html  classSuturoSim_1_1SuturoSimPanel.html  classVisualizationManager-members.html  classVisualizationManager.html  classes.html  classgiskard__suturo_1_1AdvancedScope-members.html  classgiskard__suturo_1_1AdvancedScope.html  classgiskard__suturo_1_1ConcatListSpec-members.html  classgiskard__suturo_1_1ConcatListSpec.html  classgiskard__suturo_1_1ConcatStringSpec-members.html  classgiskard__suturo_1_1ConcatStringSpec.html  classgiskard__suturo_1_1ConstListSpec-members.html  classgiskard__suturo_1_1ConstListSpec.html  classgiskard__suturo_1_1DoubleFunctionCallCache-members.html  classgiskard__suturo_1_1DoubleFunctionCallCache.html  (+140 more)
API_html/: CollisionScene_8h_source.html  ForceSensor_8h_source.html  GiskardActionServer_8h_source.html  R__Conversions_8h_source.html  SuturoSimPanel_8h_source.html  Vector3f_8h_source.html  VisualizationManager_8h_source.html  advanced__scope_8h_source.html  annotated.html  classCollisionScene-members.html  classCollisionScene.html  classForceSensor-members.html  classForceSensor.html  classGiskardActionServer-members.html  classGiskardActionServer.html  classMutexMap-members.html  classMutexMap.html  classSuturoSim_1_1SuturoSimPanel-members.html  classSuturoSim_1_1SuturoSimPanel.html  classVisualizationManager-members.html  classVisualizationManager.html  (+134 more)
graspkard/: CMakeLists.txt  Systembeschreibung.txt  package.xml
graspkard/config/: pr2_full_vel_controllers.yaml  pr2_head.yaml  pr2_left_arm.yaml  pr2_left_gripper.yaml  pr2_lookAt_joints.yaml  pr2_right_arm.yaml  pr2_right_gripper.yaml  pr2_torso.yaml  pr2_upper_body.yaml  pr2_upper_body_left_arm.yaml  pr2_upper_body_right_arm.yaml
graspkard/controller_specs/: cut.yaml  cut_position.yaml  gripper_control.yaml  gripper_control_l.yaml  gripper_control_r.yaml  knife_grasp.yaml  knife_grasp_2.yaml  knife_grasp_OLD.yaml  knife_grasp_l.yaml  knife_grasp_r.yaml  nodding.giskard  place.yaml  pr2_cut (copy).yaml  pr2_cut_l.yaml  pr2_cut_position_l.giskard  pr2_cut_position_r.giskard  pr2_cut_position_r.yaml  pr2_cut_r.yaml  pr2_detach_knife_l.giskard  pr2_detach_knife_r.giskard  pr2_detatch_knife_r.giskard  pr2_grasp_control.yaml  pr2_grasp_control_l.yaml  pr2_grasp_control_r.yaml  pr2_grasp_fingerHandle_l.giskard  pr2_grasp_fingerHandle_r.giskard  pr2_grasp_plate_l.giskard  pr2_grasp_plate_r.giskard  pr2_grasp_plate_r.yaml  pr2_left_arm_joint_control.yaml  pr2_look_at.giskard  pr2_move_and_flip_l.giskard  pr2_move_and_flip_r.giskard  pr2_move_cake_l.giskard  pr2_move_cake_r.giskard  pr2_place.yaml  pr2_place_control_l.yaml  pr2_place_control_r.yaml  pr2_place_object_l.giskard  pr2_place_object_r.giskard  (+10 more)
graspkard/controller_specs/old/: pr2_cut (another copy).yaml  pr2_cut.yaml  pr2_detach_knife.giskard
graspkard/launch/: action_server.launch  pr2.launch  spatula.launch  testenv_pr2.launch
graspkard/poses/: left_arm_praying_mantis.yaml  right_arm_praying_mantis.yaml  upper_body_praying_mantis.yaml
graspkard/src/: action_manager.cpp  client_test.cpp  pr2_r_vel_controller.cpp
graspkard/test_params/: approach_cylinder_l.yaml  approach_cylinder_r.yaml  approach_plate_r.yaml  cut.yaml  cut_pos.yaml  cut_position.yaml  detach_r.yaml  grasp_l_50.yaml  grasp_r_50.yaml  grasp_spatula.yaml  knife_grasp.yaml  l_arm_praying_mantis.yaml  move_and_flip.yaml  move_and_flip_l.yaml  move_and_flip_r.yaml  move_cake_r.yaml  move_slice.yaml  nod_position.yaml  place_cylinder_l.yaml  place_cylinder_r.yaml  place_object_r.yaml  place_spatula_l.yaml  place_spatula_r.yaml  plate_grasp.yaml  plate_grasp_r.yaml  poi_test.yaml  push_r.yaml  r_arm_collision_test.yaml  r_arm_praying_mantis.yaml  release_r_50.yaml  self_collision_test.yaml  torso_position.yaml  upper_body_praying_mantis.yaml
plate_publisher/: CMakeLists.txt  package.xml
plate_publisher/src/: plate_publisher.cpp
r_libs/: CMakeLists.txt  package.xml
r_libs/include/r_libs/: R_Conversions.h  VisualizationManager.h
r_libs/src/: VisualizationManager.cpp
suturo_action_server/: CMakeLists.txt  package.xml
suturo_action_server/config/: pr2_action_server_config.yaml
suturo_action_server/include/suturo_action_server/: CollisionScene.h  ForceSensor.h  GiskardActionServer.h  Node.h  Octree.h  Vector3f.h
suturo_action_server/launch/: action_server_sim.launch  octomap_mapping.launch  pr2_action_server.launch  pub_cylinder.launch  pub_cylinder_gripper_r.launch  pub_cylinder_sim.launch
suturo_action_server/src/: CollisionScene.cpp  ForceSensor.cpp  GiskardActionServer.cpp  Node.cpp  Octree.cpp  client_test.cpp  main_server.cpp  parserTest.cpp
suturo_action_tester/: CMakeLists.txt  cake_test.yaml  cutting_test.yaml  cutting_test2.yaml  dual_pos_goal.yaml  dumb_test.yaml  lab_grasp_test.yaml  ms4_scene.yaml  ms4_scene2.yaml  ms4_scene_nospat.yaml  ms4_scene_nospat1.yaml  package.xml  plate_test.yaml  plate_test2.yaml  plugin_description.xml  poi_test.yaml  starter.rviz  test.yaml
suturo_action_tester/include/suturo_action_tester/: SuturoSimPanel.h
suturo_action_tester/launch/: sim.launch
suturo_action_tester/meshes/: knife01.dae  knife_lab.dae  plate.dae
suturo_action_tester/msg/: AttachObject.msg  SuturoCreateObject.msg
suturo_action_tester/scripts/: InteractionManager.py  ObstacleScene.py
suturo_action_tester/src/: SuturoSimPanel.cpp  check_controllers.cpp
(+269 files in other folders)
