<?xml version="1.0"?>
<package>
  <name>graspkard</name>
  <version>0.0.0</version>
  <description>The graspkard package</description>

  <maintainer email="adrian@todo.todo">adrian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>giskard</build_depend>
  <build_depend>giskard_msgs</build_depend>
  <build_depend>r_libs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>suturo_manipulation_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>giskard</run_depend>
  <run_depend>giskard_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>r_libs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>suturo_manipulation_msgs</run_depend>
  <run_depend>iai_naive_kinematics_sim</run_depend>
</package>
